tests/sema/valid/visibility.vit
space demo/visibility;
export *;

internal proc inside() -> int { give 1; }
package proc packaged() -> int { give 2; }
external proc foreign() -> int;
public proc visible() -> int { give 3; }
