tests/sema/invalid/duplicate_binding.vit
proc main() -> int {
  let value = 1;
  let value = 2;
  give value;
}
